--- a/sources/Device/DeviceOSC.uvprojx
+++ b/sources/Device/DeviceOSC.uvprojx
@@ -2360,6 +2360,11 @@
               <FileType>8</FileType>
               <FilePath>.\src\Data\DataSettings.cpp</FilePath>
             </File>
+            <File>
+              <FileName>Reader.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Data\Reader.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
