--- a/sources/OSC-VS/Device/FPGA.vcxproj
+++ b/sources/OSC-VS/Device/FPGA.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="..\..\Device\src\Data\Storage.cpp" />
     <ClCompile Include="..\..\Device\src\Device.cpp" />
     <ClCompile Include="..\..\Device\src\Display\Colors.cpp" />
+    <ClCompile Include="..\..\Device\src\Display\Console.cpp" />
     <ClCompile Include="..\..\Device\src\Display\Display.cpp" />
     <ClCompile Include="..\..\Device\src\Display\DisplayPrimitives.cpp" />
     <ClCompile Include="..\..\Device\src\Display\Grid.cpp" />
@@ -139,6 +140,7 @@
     <ClInclude Include="..\..\Device\src\defines.h" />
     <ClInclude Include="..\..\Device\src\Device.h" />
     <ClInclude Include="..\..\Device\src\Display\Colors.h" />
+    <ClInclude Include="..\..\Device\src\Display\Console.h" />
     <ClInclude Include="..\..\Device\src\Display\Display.h" />
     <ClInclude Include="..\..\Device\src\Display\DisplayPrimitives.h" />
     <ClInclude Include="..\..\Device\src\Display\DisplayTypes.h" />
