--- a/sources/Device/DeviceOSC.uvprojx
+++ b/sources/Device/DeviceOSC.uvprojx
@@ -1845,6 +1845,16 @@
               <FileType>5</FileType>
               <FilePath>.\src\Display\Console.h</FilePath>
             </File>
+            <File>
+              <FileName>BottomPart.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Display\BottomPart.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>BottomPart.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Display\BottomPart.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
