--- a/sources/OSC-VS/Device/FPGA.vcxproj.filters
+++ b/sources/OSC-VS/Device/FPGA.vcxproj.filters
@@ -144,9 +144,6 @@
     <ClCompile Include="..\..\Device\src\libs\HAL\stm32f4xx_it.c">
       <Filter>libs\HAL</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Device\src\Utils\Decoder.cpp">
-      <Filter>Utils</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\Device\src\Hardware\CPU.cpp">
       <Filter>Hardware</Filter>
     </ClCompile>
@@ -297,6 +294,9 @@
     <ClCompile Include="..\..\Device\src\Display\RShift.cpp">
       <Filter>Display</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Device\src\Hardware\Decoder.cpp">
+      <Filter>Hardware</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal.h">
@@ -424,9 +424,6 @@
     </ClInclude>
     <ClInclude Include="..\..\Device\src\libs\HAL\stm32f4xx_it.h">
       <Filter>libs\HAL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\Device\src\Utils\Decoder.h">
-      <Filter>Utils</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Device\src\Hardware\CPU.h">
       <Filter>Hardware</Filter>
@@ -661,6 +658,9 @@
     </ClInclude>
     <ClInclude Include="..\..\Device\src\Display\RShift.h">
       <Filter>Display</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Device\src\Hardware\Decoder.h">
+      <Filter>Hardware</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
